# aura

./: .ckignore  .claude  .gitattributes  .gitignore  000_project_overview.html  001_system_architecture.html  002_theoretical_model.html  003_information_flow_contract.html  004_distributed_systems_contract.html  005_system_invariants.html  100_authority_and_identity.html  101_accounts_and_commitment_tree.html  102_journal.html  103_relational_contexts.html  104_consensus.html  105_identifiers_and_boundaries.html  106_effect_system_and_runtime.html  107_mpst_and_choreography.html  108_transport_and_information_flow.html  109_authorization.html  110_rendezvous.html  110_state_reduction.html  111_maintenance.html  112_amp.html  114_frost_pipelining_optimization.html  404.html  801_hello_world_guide.html  802_core_systems_guide.html  803_coordination_guide.html  804_advanced_coordination_guide.html  805_development_patterns.html  805_testing_guide.html  806_simulation_guide.html  807_maintenance_ota_guide.html  999_project_structure.html  AGENTS.md  ARCHITECTURE_REVIEW_FINDINGS.md  CLAUDE.md  CLIPPY_FIXES_SUMMARY.md  Cargo.nix  (+27 more)
crates/agent/: Cargo.toml  test.rs
crates/agent/examples/: README.md  agent_demo.rs  agent_state.rs  basic_agent.rs  capability_demo.rs  enhanced_security_demo.rs  refactoring_comparison.rs  service_delegation.rs  state_management_demo.rs  storage_secure.rs  transport_demo.rs
crates/agent/src/: agent.rs  android_keystore.rs  capability_agent.rs  credential.rs  dkd.rs  error.rs  frost_manager.rs  guardian.rs  infrastructure.rs  integrated_agent.rs  invitation.rs  lib.rs  recovery.rs  relationship_keys.rs  secure_storage.rs  session_agent.rs  storage_adapter.rs  traits.rs  transport_adapter.rs  types.rs
crates/agent/tests/: macos_keychain_tests.rs  mocks.rs  quick_keychain_test.rs  standalone_keychain_test.rs
crates/app-console/: Cargo.toml  Trunk.toml  index.html
crates/app-console/public/: fonts.css
crates/app-console/src/: lib.rs
crates/app-sim-server/: Cargo.toml
crates/app-sim-server/src/: branch_manager.rs  command_handler.rs  main.rs  scenario_export.rs  simulation_wrapper.rs  websocket.rs
crates/aura-agent/: ARCHITECTURE.md  Cargo.toml  README.md  test_compile.rs
crates/aura-agent/benches/: telltale_machine_backends.rs  telltale_vm_backends.rs
crates/aura-agent/examples/: README.md  agent_basic.rs  custom_transport_runtime.rs  minimal_custom_runtime.rs  storage_secure.rs
crates/aura-agent/src/: adaptive_privacy_control.rs  agent.rs  config.rs  effects.rs  error.rs  errors.rs  fact_registry.rs  fact_types.rs  keyfabric_agent.rs  lib.rs  maintenance.rs  operations.rs  ota_orchestrator.rs  reconfiguration.rs  runtime_bridge.rs  runtime_bridge_impl.rs  storage_adapter.rs  storage_keys.rs  system.rs  task_registry.rs  testing.rs  token_profiles.rs  traits.rs  transport_adapter.rs
crates/aura-agent/tests/: auth_service_test.rs  basic_types_test.rs  beta_flow_e2e.rs  bootstrap_required.rs  compile_fail.rs  delta_application_test.rs  frp_glitch_freedom_test.rs  id_generation_tests.rs  integration_tests.rs  invitation_service_test.rs  journal_integration_test.rs  lan_integration.rs  macos_keychain_tests.rs  production_manifest_admission.rs  quick_keychain_test.rs  reactive_scheduler_signals_e2e.rs  reconfiguration_integration.rs  recovery_integration.rs  recovery_service_test.rs  runtime_bridge_channel_resolution.rs  session_service_test.rs  telltale_machine_concurrent_contracts.rs  telltale_machine_hardening.rs  telltale_machine_parity.rs  telltale_machine_scenario_contracts.rs  telltale_vm_concurrent_contracts.rs  telltale_vm_hardening.rs  telltale_vm_parity.rs  telltale_vm_scenario_contracts.rs  theorem_pack_admission.rs  threshold_signing_e2e.rs  tree_integration.rs  web_runtime_bridge_wasm.rs
crates/aura-amp/: ARCHITECTURE.md  Cargo.toml  README.md
crates/aura-amp/src/: capabilities.rs  channel.rs  choreography.choreo  choreography.rs  choreography.tell  config.rs  consensus.rs  core.rs  epoch_transition.tell  epoch_transition_choreography.rs  epoch_transition_cryptoshred.tell  epoch_transition_quarantine.tell  evidence.rs  journal.rs  lib.rs  prelude.rs  wire.rs
crates/aura-amp/tests/: channel_tests.rs  consensus_amp.rs  evidence_tests.rs  wire.rs  wire_tests.rs
crates/aura-analysis-client/: Cargo.toml
crates/aura-analysis-client/src/: causality.rs  lib.rs  property_causality.rs  property_monitor.rs  property_timeline.rs  query.rs  violation.rs
crates/aura-anti-entropy/: ARCHITECTURE.md  Cargo.toml
crates/aura-anti-entropy/src/: anti_entropy.rs  broadcast.rs  config.rs  effects.rs  lib.rs  persistent.rs  prelude.rs  pure.rs  test_support.rs  wire.rs
crates/aura-anti-entropy/tests/: anti_entropy_correctness.rs  reconciliation.rs
crates/aura-app/: ARCHITECTURE.md  Cargo.toml
crates/aura-app/src/: authorization.rs  budget.rs  errors.rs  lib.rs  reactive_state.rs  runtime_bridge.rs  signal_defs.rs  (+6 more)
crates/aura-authenticate/: Cargo.toml  Cargo.toml.bak
crates/aura-authentication/: ARCHITECTURE.md  Cargo.toml
crates/aura-authorization/: ARCHITECTURE.md  Cargo.toml
crates/aura-bridge/: ARCHITECTURE.md  Cargo.toml
crates/aura-chat/: ARCHITECTURE.md  Cargo.toml
crates/aura-choreography/: Cargo.toml  README.md
crates/aura-cli/: Cargo.toml
crates/aura-composition/: ARCHITECTURE.md  Cargo.toml
crates/aura-consensus/: ARCHITECTURE.md  Cargo.toml  EQUIVOCATION_ARCHITECTURE.md  EQUIVOCATION_INTEGRATION.md  README.md
crates/aura-core/: ARCHITECTURE.md  Cargo.toml
crates/aura-crypto/: Cargo.toml
crates/aura-effects/: ARCHITECTURE.md  Cargo.toml  README.md
crates/aura-errors/: Cargo.toml
crates/aura-frost/: Cargo.toml  Cargo.toml.bak
crates/aura-guards/: ARCHITECTURE.md  Cargo.toml  README.md
crates/aura-harness/: ARCHITECTURE.md  Cargo.toml
crates/aura-identity/: Cargo.toml  Cargo.toml.bak
crates/aura-interfaces/: Cargo.toml
crates/aura-invitation/: ARCHITECTURE.md  Cargo.toml
crates/aura-journal/: ARCHITECTURE.md  Cargo.toml  INVARIANTS.md
crates/aura-macros/: ARCHITECTURE.md  Cargo.toml
(+5561 files in other folders)
