[workspace]
resolver = "2"

members = [
    # L1 Foundation
    "crates/aura-core",

    # L2 Specification
    "crates/aura-journal",
    "crates/aura-authorization",
    "crates/aura-signature",
    "crates/aura-store",
    "crates/aura-transport",
    "crates/aura-maintenance",
    "crates/aura-mpst",
    "crates/aura-macros",

    # L3 Implementation
    "crates/aura-effects",
    "crates/aura-composition",

    # L4 Orchestration
    "crates/aura-protocol",
    "crates/aura-guards",
    "crates/aura-consensus",
    "crates/aura-amp",
    "crates/aura-anti-entropy",

    # L5 Features
    "crates/aura-authentication",
    "crates/aura-chat",
    "crates/aura-invitation",
    "crates/aura-recovery",
    "crates/aura-relational",
    "crates/aura-rendezvous",
    "crates/aura-social",
    "crates/aura-sync",

    # L6 Runtime
    "crates/aura-agent",
    "crates/aura-simulator",
    "crates/aura-app",

    # L7 UI
    "crates/aura-terminal",
    "crates/aura-ui",
    "crates/aura-web",

    # L8 Testing
    "crates/aura-testkit",
    "crates/aura-quint",
    "crates/aura-harness",

    # Examples
    "examples/hello-crdt",
    "examples/hello-choreo",
    "examples/session-choreography",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sam Hart"]
license = "Apache-2.0"
repository = "https://github.com/hxrts/aura"
homepage = "https://hxrts.com/aura"

[workspace.dependencies]
# Cryptography
frost-core = { version = "1.0", features = ["serialization"] }
frost-ed25519 = { version = "1.0", features = ["serialization"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
curve25519-dalek = "4.1"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20 = "0.9"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.6"
signature = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bytes = "0.11"
bincode = "1.3"
postcard = { version = "1.0", features = ["use-std"] }
serde_ipld_dagcbor = "0.6"

# Async runtime
# Pin futures to 0.3.31 — 0.3.32 has ambiguous Self::Error on Rust 1.93
tokio = { version = "1.49", default-features = false, features = [
    "io-util", "macros", "rt", "sync", "time",
] }
futures = "=0.3.31"
futures-util = { version = "=0.3.31", features = ["alloc"] }
futures-signals = "0.3"
async-trait = "0.1"
async-lock = "3"

# Networking
tokio-tungstenite = "0.20"
socket2 = { version = "0.5", features = ["all"] }

# Session types
# Current upstream Telltale package layout.
telltale = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-types = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-theory = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-language = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-runtime = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-machine = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }
telltale-bridge = { version = "10.0.0", git = "https://github.com/hxrts/telltale.git", rev = "e5646b3be32b36e0d9f14df5b43d8827b6d3d3df" }

# Authorization
biscuit-auth = { version = "5.0", features = ["wasm"] }

# CLI
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "v5", "serde", "js"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
hex = "0.4"
indexmap = "2.5"
dirs = "5.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
getrandom = { version = "0.2", features = ["js"] }
sysinfo = "0.33"

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Testing
tempfile = "3.8"
assert_matches = "1.5"
serial_test = "3.0"
trybuild = "1.0"
proptest = { version = "=1.5.0", default-features = false, features = ["std"] }
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false

[profile.release.package.aura-terminal]
opt-level = "s"

[profile.dev]
opt-level = 0
debug = true

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = false
debug = true

[workspace.lints.clippy]
disallowed_methods = "deny"
disallowed_types = "deny"
missing_docs_in_private_items = "allow"
too_many_arguments = "allow"
type_complexity = "warn"
unwrap_used = "warn"
expect_used = "warn"
must_use_candidate = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
large_types_passed_by_value = "warn"
trivially_copy_pass_by_ref = "allow"
needless_pass_by_value = "allow"
redundant_clone = "warn"
implicit_clone = "warn"
vec_box = "warn"
cognitive_complexity = "allow"
manual_let_else = "allow"
unused_async = "allow"
uninlined_format_args = "warn"
default_trait_access = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
