# Aura Agent - Capability-driven identity and session management with clean architecture
[package]
name = "aura-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aura Contributors"]
license = "MIT OR Apache-2.0"
description = "Capability-based agents with clean service layer architecture for identity management"
keywords = ["identity", "capability", "agent", "threshold", "cryptography"]
categories = ["cryptography", "authentication"]

[dependencies]
# Workspace crates
aura-types = { path = "../aura-types" }
aura-protocol = { path = "../aura-protocol" }
aura-journal = { path = "../journal" }
aura-crypto = { path = "../crypto" }
aura-transport = { path = "../transport" }
aura-store = { path = "../store" }

# Cryptography provided through aura-crypto
frost-ed25519 = { workspace = true }
blake3 = { workspace = true }
qrcode = { version = "0.13", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# WebSocket server for dev console (optional)
axum = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
hex = "0.4"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
redb = { workspace = true }
snow = { workspace = true }
quinn = "0.11"
quinn-proto = "0.11"
rustls = "0.23"
rcgen = "0.13"

# Platform-specific secure storage
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyutils = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"


[features]
default = []
qrcode = ["dep:qrcode"]
dev-console = ["dep:axum", "dep:tokio-tungstenite", "dep:tower", "dep:tower-http"]
real-android-keystore = []  # Enable real Android Keystore implementation

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tracing-subscriber = { workspace = true }
