[package]
name = "app-console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Leptos framework for reactive UI
leptos = { version = "0.7", features = ["csr"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebSocket",
  "MouseEvent",
  "WheelEvent",
  "KeyboardEvent",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "console",
  "Window",
  "Document",
  "Location",
  "History",
  "Url"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["wasm-bindgen"] }
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
app-wasm = { path = "../app-wasm", features = ["leptos"] }
app-console-types = { path = "../app-console-types" }

# Note: Profile settings moved to workspace root Cargo.toml
