[package]
name = "app-sim-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
# Internal crates
app-console-types = { path = "../app-console-types" }
aura-simulator = { path = "../aura-simulator" }
aura-types = { path = "../aura-types" }
# aura-protocol = { path = "../aura-protocol" } # Temporarily disabled due to compilation errors in protocol crate

# WebSocket and HTTP server
tokio = { workspace = true }
tokio-tungstenite = "0.21"
axum = { workspace = true, features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# JSON-RPC and serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Collections and utilities
indexmap = { workspace = true }
tokio-stream = "0.1"

# Configuration
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
