# Aura Agent - Capability-driven identity and session management with clean architecture
[package]
name = "aura-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-based agents with clean service layer architecture for identity management"
keywords = ["identity", "capability", "agent", "threshold", "cryptography"]
categories = ["cryptography", "authentication"]
include = ["src/**", "Cargo.toml"]

[dependencies]
# Workspace crates
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-app = { path = "../aura-app", version = "0.1.0", features = ["signals"] }  # RuntimeBridge trait definition + signals for forwarding
aura-effects = { path = "../aura-effects", version = "0.1.0" }
aura-composition = { path = "../aura-composition", version = "0.1.0" }
aura-protocol = { path = "../aura-protocol", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }
aura-consensus = { path = "../aura-consensus", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-relational = { path = "../aura-relational", version = "0.1.0" }
aura-amp = { path = "../aura-amp", version = "0.1.0" }
aura-chat = { path = "../aura-chat", version = "0.1.0" }
aura-authentication = { path = "../aura-authentication", version = "0.1.0" }
aura-invitation = { path = "../aura-invitation", version = "0.1.0" }
aura-rendezvous = { path = "../aura-rendezvous", version = "0.1.0" }
aura-social = { path = "../aura-social", version = "0.1.0" }
aura-sync = { path = "../aura-sync", version = "0.1.0" }
aura-maintenance = { path = "../aura-maintenance", version = "0.1.0" }
aura-transport = { path = "../aura-transport", version = "0.1.0" }
aura-recovery = { path = "../aura-recovery", version = "0.1.0" }
aura-authorization = { path = "../aura-authorization", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
aura-signature = { path = "../aura-signature", version = "0.1.0" }
aura-store = { path = "../aura-store", version = "0.1.0" }

# Cryptography dependencies
ed25519-dalek = { workspace = true }
frost-ed25519 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# Choreography dependencies
telltale = { workspace = true }
telltale-vm = { workspace = true, optional = true, features = ["multi-thread"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
biscuit-auth = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-signals = { workspace = true }  # For SignalForwarder signal streaming

# Utilities
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
cfg-if = "1"
dirs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
get_if_addrs = "0.5"
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }

# Platform-specific secure storage
[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "android")'.dependencies]


[features]
default = ["choreo-backend-telltale-vm"]
# qrcode = ["dep:qrcode"]  # commented out - qrcode not in workspace
real-android-keystore = []  # Enable real Android Keystore implementation

# Simulation feature: enables SimulationEnvironmentFactory and related abstractions
# for decoupling the simulator from agent internals
simulation = ["aura-core/simulation"]

# Production/default runtime requires the Telltale VM backend.
choreo-backend-telltale-vm = ["dep:telltale-vm", "aura-effects/telltale-runtime-capability"]

# Platform-specific presets
# Enable to access the preset builders and AgentBuilder entrypoints.
ios = []      # iOS preset: Keychain crypto, app container storage
android = []  # Android preset: Keystore crypto, encrypted storage
web = []      # Web/WASM preset: Web Crypto API, IndexedDB storage

[dev-dependencies]
aura-testkit = { path = "../aura-testkit" }
anyhow = { workspace = true }
async-lock = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
trybuild = { workspace = true }
proptest = { workspace = true }
telltale-vm = { workspace = true, features = ["multi-thread"] }
telltale-types = { workspace = true }
telltale-theory = { workspace = true }
tempfile = { workspace = true }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
loom = "0.7"

[[bench]]
name = "telltale_vm_backends"
harness = false
required-features = ["choreo-backend-telltale-vm"]

[lints]
workspace = true
