[package]
name = "aura-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-based agents with clean service layer architecture for identity management"
keywords = ["identity", "capability", "agent", "threshold", "cryptography"]
categories = ["cryptography", "authentication"]
include = ["src/**", "Cargo.toml"]

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-app = { path = "../aura-app", version = "0.1.0", features = ["signals"] }
aura-effects = { path = "../aura-effects", version = "0.1.0" }
aura-composition = { path = "../aura-composition", version = "0.1.0" }
aura-protocol = { path = "../aura-protocol", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }
aura-consensus = { path = "../aura-consensus", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-relational = { path = "../aura-relational", version = "0.1.0" }
aura-amp = { path = "../aura-amp", version = "0.1.0" }
aura-chat = { path = "../aura-chat", version = "0.1.0" }
aura-authentication = { path = "../aura-authentication", version = "0.1.0" }
aura-invitation = { path = "../aura-invitation", version = "0.1.0" }
aura-rendezvous = { path = "../aura-rendezvous", version = "0.1.0" }
aura-social = { path = "../aura-social", version = "0.1.0" }
aura-sync = { path = "../aura-sync", version = "0.1.0" }
aura-maintenance = { path = "../aura-maintenance", version = "0.1.0" }
aura-transport = { path = "../aura-transport", version = "0.1.0" }
aura-recovery = { path = "../aura-recovery", version = "0.1.0" }
aura-authorization = { path = "../aura-authorization", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
aura-signature = { path = "../aura-signature", version = "0.1.0" }
aura-store = { path = "../aura-store", version = "0.1.0" }

ed25519-dalek = { workspace = true }
frost-ed25519 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

telltale = { workspace = true }
telltale-machine = { workspace = true, optional = true, features = ["multi-thread"] }
telltale-types-v9 = { package = "telltale-types", version = "9.0.0" }
telltale-vm = { workspace = true, optional = true, features = ["multi-thread"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
biscuit-auth = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-signals = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
cfg-if = "1"
dirs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
get_if_addrs = "0.5"
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[features]
default = ["choreo-backend-telltale-vm"]
real-android-keystore = []
simulation = ["aura-core/simulation"]
choreo-backend-telltale-vm = [
    "dep:telltale-machine",
    "dep:telltale-vm",
    "aura-effects/telltale-runtime-capability",
]
ios = []
android = []
web = []

[dev-dependencies]
aura-testkit = { path = "../aura-testkit" }
anyhow = { workspace = true }
async-lock = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
trybuild = { workspace = true }
proptest = { workspace = true }
telltale-machine = { workspace = true, features = ["multi-thread"] }
telltale-vm = { workspace = true, features = ["multi-thread"] }
telltale-types = { workspace = true }
telltale-theory = { workspace = true }
tempfile = { workspace = true }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
loom = "0.7"

[[bench]]
name = "telltale_vm_backends"
harness = false
required-features = ["choreo-backend-telltale-vm"]

[lints]
workspace = true
