[package]
name = "hxrts-aura-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-based agents with clean service layer architecture for identity management"
keywords = ["identity", "capability", "agent", "threshold", "cryptography"]
categories = ["cryptography", "authentication"]
include = ["src/**", "Cargo.toml"]

[lib]
name = "aura_agent"
[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-app = { package = "hxrts-aura-app", path = "../aura-app", version = "=0.2.0", features = ["signals"] }
aura-effects = { package = "hxrts-aura-effects", path = "../aura-effects", version = "=0.2.0" }
aura-composition = { package = "hxrts-aura-composition", path = "../aura-composition", version = "=0.2.0" }
aura-protocol = { package = "hxrts-aura-protocol", path = "../aura-protocol", version = "=0.2.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.2.0" }
aura-consensus = { package = "hxrts-aura-consensus", path = "../aura-consensus", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-relational = { package = "hxrts-aura-relational", path = "../aura-relational", version = "=0.2.0" }
aura-amp = { package = "hxrts-aura-amp", path = "../aura-amp", version = "=0.2.0" }
aura-chat = { package = "hxrts-aura-chat", path = "../aura-chat", version = "=0.2.0" }
aura-authentication = { package = "hxrts-aura-authentication", path = "../aura-authentication", version = "=0.2.0" }
aura-invitation = { package = "hxrts-aura-invitation", path = "../aura-invitation", version = "=0.2.0" }
aura-rendezvous = { package = "hxrts-aura-rendezvous", path = "../aura-rendezvous", version = "=0.2.0" }
aura-social = { package = "hxrts-aura-social", path = "../aura-social", version = "=0.2.0" }
aura-sync = { package = "hxrts-aura-sync", path = "../aura-sync", version = "=0.2.0" }
aura-maintenance = { package = "hxrts-aura-maintenance", path = "../aura-maintenance", version = "=0.2.0" }
aura-transport = { package = "hxrts-aura-transport", path = "../aura-transport", version = "=0.2.0" }
aura-recovery = { package = "hxrts-aura-recovery", path = "../aura-recovery", version = "=0.2.0" }
aura-authorization = { package = "hxrts-aura-authorization", path = "../aura-authorization", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.2.0" }
aura-signature = { package = "hxrts-aura-signature", path = "../aura-signature", version = "=0.2.0" }
aura-store = { package = "hxrts-aura-store", path = "../aura-store", version = "=0.2.0" }

ed25519-dalek = { workspace = true }
frost-ed25519 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

telltale = { workspace = true }
telltale-machine = { workspace = true, optional = true, features = ["multi-thread"] }
telltale-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
biscuit-auth = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-signals = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
cfg-if = "1"
dirs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
get_if_addrs = "0.5"
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[features]
default = ["choreo-backend-telltale-machine"]
real-android-keystore = []
simulation = ["aura-core/simulation"]
transparent_onion = [
    "aura-core/transparent_onion",
    "aura-effects/transparent_onion",
    "aura-protocol/transparent_onion",
    "aura-social/transparent_onion",
    "aura-sync/transparent_onion",
]
choreo-backend-telltale-machine = [
    "dep:telltale-machine",
    "aura-effects/telltale-runtime-capability",
]
ios = []
android = []
web = []

[dev-dependencies]
aura-testkit = { package = "aura-testkit", path = "../aura-testkit" }
anyhow = { workspace = true }
async-lock = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
trybuild = { workspace = true }
proptest = { workspace = true }
telltale-machine = { workspace = true, features = ["multi-thread"] }
telltale-types = { workspace = true }
telltale-theory = { workspace = true }
tempfile = { workspace = true }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
loom = "0.7"

[[bench]]
name = "telltale_machine_backends"
harness = false
required-features = ["choreo-backend-telltale-machine"]

[lints]
workspace = true
